Refactor Job History to Support Search and Pagination
1. Replaced the job history retrieval mechanism with a paginated and searchable model.
2. new job History frontend components
3. API endpoint updates